--- a/ionic-chat-app/www/index.html
+++ b/ionic-chat-app/www/index.html
@@ -19,7 +19,7 @@
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
-    <script src="https://cdn.socket.io/socket.io-1.3.5.js"></script>
+    <script src="//cdn.bootcss.com/socket.io/1.4.8/socket.io.min.js"></script>
     <script src="js/app.services.js"></script>
     <script src="js/app.controllers.js"></script>
     <script src="js/app.js"></script>
