completed the feature

--- a/ionic-chat-app/www/index.html
+++ b/ionic-chat-app/www/index.html
@@ -19,6 +19,7 @@
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
+    <!--<script src="//cdn.bootcss.com/jquery/3.0.0/jquery.slim.min.js"></script>-->
     <script src="//cdn.bootcss.com/socket.io/1.4.8/socket.io.min.js"></script>
     <script src="js/app.services.js"></script>
     <script src="js/app.controllers.js"></script>
